myVPCCreation.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Parameters": {
		"KeyName": {
			"Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance",
			"Type": "AWS::EC2::KeyPair::KeyName",
			"ConstraintDescription": "must be the name of an existing EC2 KeyPair."
		}
	},
	"Metadata": {
		"AWS::CloudFormation::Designer": {
			"c10bbaab-7432-4ce7-975e-98f078d2ac61": {
				"size": {
					"width": 530,
					"height": 250
				},
				"position": {
					"x": 420,
					"y": 30
				},
				"z": 0,
				"embeds": [
					"d82548d7-e42b-4b6d-b757-7a9be81936e4",
					"8dcd2e9b-6aec-4e4b-b9df-7a47251f470a",
					"805b8910-6d83-4d1f-be94-e7a79eab04c0"
				]
			},
			"805b8910-6d83-4d1f-be94-e7a79eab04c0": {
				"size": {
					"width": 200,
					"height": 120
				},
				"position": {
					"x": 440,
					"y": 140
				},
				"z": 1,
				"parent": "c10bbaab-7432-4ce7-975e-98f078d2ac61",
				"embeds": [
					"0a164f36-17c7-47ad-9a56-b5ccbcfee90a",
					"f27abeda-1160-4904-b684-e2f080021a10"
				],
				"iscontainedinside": [
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61"
				]
			},
			"8dcd2e9b-6aec-4e4b-b9df-7a47251f470a": {
				"size": {
					"width": 140,
					"height": 120
				},
				"position": {
					"x": 650,
					"y": 140
				},
				"z": 1,
				"parent": "c10bbaab-7432-4ce7-975e-98f078d2ac61",
				"embeds": [
					"0e54bad4-1537-42f5-917e-1809cc9be67f"
				],
				"iscontainedinside": [
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61"
				]
			},
			"1510ebdf-3e37-4ba0-9af8-761c23d7ba3b": {
				"size": {
					"width": 60,
					"height": 60
				},
				"position": {
					"x": 350,
					"y": 150
				},
				"z": 0,
				"embeds": []
			},
			"f27abeda-1160-4904-b684-e2f080021a10": {
				"size": {
					"width": 60,
					"height": 60
				},
				"position": {
					"x": 460,
					"y": 170
				},
				"z": 2,
				"parent": "805b8910-6d83-4d1f-be94-e7a79eab04c0",
				"embeds": [],
				"iscontainedinside": [
					"805b8910-6d83-4d1f-be94-e7a79eab04c0",
					"805b8910-6d83-4d1f-be94-e7a79eab04c0",
					"805b8910-6d83-4d1f-be94-e7a79eab04c0",
					"805b8910-6d83-4d1f-be94-e7a79eab04c0",
					"805b8910-6d83-4d1f-be94-e7a79eab04c0",
					"805b8910-6d83-4d1f-be94-e7a79eab04c0"
				]
			},
			"0e54bad4-1537-42f5-917e-1809cc9be67f": {
				"size": {
					"width": 60,
					"height": 60
				},
				"position": {
					"x": 680,
					"y": 170
				},
				"z": 2,
				"parent": "8dcd2e9b-6aec-4e4b-b9df-7a47251f470a",
				"embeds": [],
				"iscontainedinside": [
					"8dcd2e9b-6aec-4e4b-b9df-7a47251f470a",
					"8dcd2e9b-6aec-4e4b-b9df-7a47251f470a",
					"8dcd2e9b-6aec-4e4b-b9df-7a47251f470a",
					"8dcd2e9b-6aec-4e4b-b9df-7a47251f470a",
					"8dcd2e9b-6aec-4e4b-b9df-7a47251f470a"
				]
			},
			"d82548d7-e42b-4b6d-b757-7a9be81936e4": {
				"size": {
					"width": 60,
					"height": 60
				},
				"position": {
					"x": 530,
					"y": 50
				},
				"z": 1,
				"parent": "c10bbaab-7432-4ce7-975e-98f078d2ac61",
				"embeds": [],
				"iscontainedinside": [
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61",
					"c10bbaab-7432-4ce7-975e-98f078d2ac61"
				]
			},
			"0a164f36-17c7-47ad-9a56-b5ccbcfee90a": {
				"size": {
					"width": 60,
					"height": 60
				},
				"position": {
					"x": 550,
					"y": 170
				},
				"z": 2,
				"parent": "805b8910-6d83-4d1f-be94-e7a79eab04c0",
				"embeds": [],
				"iscontainedinside": [
					"805b8910-6d83-4d1f-be94-e7a79eab04c0",
					"805b8910-6d83-4d1f-be94-e7a79eab04c0"
				]
			}
		}
	},
	"Resources": {
		"myVPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": "10.0.0.0/16",
        "EnableDnsSupport" : "true",
    	    "EnableDnsHostnames" : "true"
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "c10bbaab-7432-4ce7-975e-98f078d2ac61"
				}
			}
		},
		"myPublicSubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "myVPC"
				},
				"CidrBlock": "10.0.1.0/24",
				"AvailabilityZone": "eu-west-1a",
        "MapPublicIpOnLaunch": "true"
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "805b8910-6d83-4d1f-be94-e7a79eab04c0"
				}
			}
		},
		"myPublicSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "myVPC"
				},
				"CidrBlock": "10.0.2.0/24",
				"AvailabilityZone": "eu-west-1b",
        "MapPublicIpOnLaunch": "true"
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "805b8910-6d83-4d1f-be94-e7a79eab04c0"
				}
			}
		},
		"myPublicSubnet3": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "myVPC"
				},
				"CidrBlock": "10.0.3.0/24",
				"AvailabilityZone": "eu-west-1c",
        "MapPublicIpOnLaunch": "true"
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "805b8910-6d83-4d1f-be94-e7a79eab04c0"
				}
			}
		},
		"myPrivateSubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "myVPC"
				},
				"CidrBlock": "10.0.4.0/24",
				"AvailabilityZone": "eu-west-1a"
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "8dcd2e9b-6aec-4e4b-b9df-7a47251f470a"
				}
			}
		},
		"myPrivateSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "myVPC"
				},
				"CidrBlock": "10.0.5.0/24",
				"AvailabilityZone": "eu-west-1b"
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "8dcd2e9b-6aec-4e4b-b9df-7a47251f470a"
				}
			}
		},
		"myPrivateSubnet3": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "myVPC"
				},
				"CidrBlock": "10.0.6.0/24",
				"AvailabilityZone": "eu-west-1c"
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "8dcd2e9b-6aec-4e4b-b9df-7a47251f470a"
				}
			}
		},
		"myIGW": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "1510ebdf-3e37-4ba0-9af8-761c23d7ba3b"
				}
			}
		},
		"myEIP": {
			"Type": "AWS::EC2::EIP",
			"Properties": {}
		},
		"myNATGW": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"SubnetId": {
					"Ref": "myPublicSubnet1"
				},
				"AllocationId": {
					"Fn::GetAtt": ["myEIP", "AllocationId"]
				},
				"Tags": [{
					"Key": "foo",
					"Value": "bar"
				}]
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "0a164f36-17c7-47ad-9a56-b5ccbcfee90a"
				}
			}
		},
		"AttachGateway": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "myVPC"
				},
				"InternetGatewayId": {
					"Ref": "myIGW"
				}
			}
		},
		"myRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "myVPC"
				},
				"Tags": [{
					"Key": "foo",
					"Value": "bar"
				}]
			}
		},
		"myNetworkAcl": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {
					"Ref": "myVPC"
				},
				"Tags": [{
					"Key": "foo",
					"Value": "bar"
				}]
			}
		},
		"myNetworkAclEntry1": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {
					"Ref": "myNetworkAcl"
				},
				"RuleNumber": "100",
				"Protocol": "-1",
				"RuleAction": "allow",
				"Egress": "true",
				"CidrBlock": "0.0.0.0/0",
				"Icmp": {
					"Code": "-1",
					"Type": "-1"
				},
				"PortRange": {
					"From": "1",
					"To": "65535"
				}
			}
		},
		"myNetworkAclEntry2": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {
					"Ref": "myNetworkAcl"
				},
				"RuleNumber": "100",
				"Protocol": "6",
				"RuleAction": "allow",
				"Egress": "false",
				"CidrBlock": "10.0.1.0/0",
				"Icmp": {
					"Code": "-1",
					"Type": "-1"
				},
				"PortRange": {
					"From": "22",
					"To": "22"
				}
			}
		},
		"myNetworkAclEntry3": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {
					"Ref": "myNetworkAcl"
				},
				"RuleNumber": "100",
				"Protocol": "6",
				"RuleAction": "allow",
				"Egress": "false",
				"CidrBlock": "10.0.2.0/0",
				"Icmp": {
					"Code": "-1",
					"Type": "-1"
				},
				"PortRange": {
					"From": "22",
					"To": "22"
				}
			}
		},
    "myRouteEntry1": {
			"Type": "AWS::EC2::Route",
      "DependsOn" : "myIGW",
			"Properties": {
				"RouteTableId": {
					"Ref": "myRouteTable"
				},
				"DestinationCidrBlock": "0.0.9.0/0",
				"GatewayId": { "Ref" : "myIGW" }
			}
		},
		"mySecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "This is my security group",
        "VpcId" :  {"Ref": "myVPC"},
        "SecurityGroupIngress": [{
					"IpProtocol": "tcp",
					"FromPort": 80,
					"ToPort": 80,
					"CidrIp": "0.0.0.0/0"
				}],
				"SecurityGroupEgress": [{
					"IpProtocol": "tcp",
					"FromPort": 80,
					"ToPort": 80,
					"CidrIp": "0.0.0.0/0"
				}]
			}
		},
		"myPublicEC2Instance": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"InstanceType": "t2.micro",
				"ImageId": "ami-031a3db8bacbcdc20",
				"KeyName": {
					"Ref": "KeyName"
				},
				"SubnetId": {"Ref": "myPublicSubnet1"},
				"BlockDeviceMappings": [{
						"DeviceName": "/dev/sdm",
						"Ebs": {
							"VolumeType": "gp2",
							"DeleteOnTermination": "false",
							"VolumeSize": "10"
						}
					},
					{
						"DeviceName": "/dev/sdk",
						"NoDevice": {}
					}
				]
			}
		},
		"myPrivateEC2Instance": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"InstanceType": "t2.micro",
				"ImageId": "ami-031a3db8bacbcdc20",
				"KeyName": {
					"Ref": "KeyName"
				},
				"SubnetId": {"Ref": "myPrivateSubnet1"},
				"BlockDeviceMappings": [{
						"DeviceName": "/dev/sdm",
						"Ebs": {
							"VolumeType": "gp2",
							"DeleteOnTermination": "false",
							"VolumeSize": "10"
						}
					},
					{
						"DeviceName": "/dev/sdk",
						"NoDevice": {}
					}
				]
			}
		}
	}
}
